# word2vec

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
dataset/: wakati.txt
mecab_ipadic/: dockerfile
model/: w2v.model
multirun/2023-08-20/20-49-56/: multirun.yaml
multirun/2023-08-20/20-49-56/0/.hydra/: config.yaml  hydra.yaml
multirun/2023-08-20/20-52-43/: multirun.yaml
multirun/2023-08-20/20-52-43/0/.hydra/: config.yaml  hydra.yaml
multirun/2023-08-20/23-06-23/0/.hydra/: hydra.yaml
outputs/2023-08-18/23-38-56/.hydra/: config.yaml  hydra.yaml
outputs/2023-08-18/23-39-31/.hydra/: config.yaml  hydra.yaml
outputs/2023-08-18/23-41-54/.hydra/: hydra.yaml
outputs/2023-08-18/23-44-00/.hydra/: hydra.yaml
src/: make_wiki_corpus.py  predict.py  train.py
src/conf/: config.yaml
src/conf/model/: word2vec.yaml
src/conf/predict/: similar.yaml  similar_words.yaml
src/word2vec/: __init__.py
