[project]
name = "word2vec"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hagiwa901", email = "kedama4156991@gmail.com" }
]
dependencies = [
    "gensim>=4.3.1",
    "pylint>=2.17.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
train-script = { call =  "word2vec:train('dataset/wakati.txt', 'model/w2v.model')" }
predict-script = { call =  "word2vec:predict('model/w2v.model', '今日')" }
