[project]
name = "word2vec"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hagiwa901", email = "kedama4156991@gmail.com" }
]
dependencies = [
    "gensim>=4.3.1",
    "pylint>=2.17.5",
    "wikiextractor>=3.0.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
wiki-extract = { cmd = ["python", "-m", "wikiextractor.WikiExtractor", "dataset/jawiki-latest-pages-articles.xml.bz2", "-o", "dataset/"] }
wiki-corpus = { cmd = "find dataset | grep wiki | awk '{system(\"cat \"$0\" >> dataset/wiki.txt\")}'" }
train-script = { call =  "train:main('dataset/wakati.txt', 'model/w2v.model')" }
predict-script = { call =  "word2vec:predict('model/w2v.model', '便利')" }
