[project]
name = "word2vec"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hagiwa901", email = "kedama4156991@gmail.com" }
]
dependencies = [
    "gensim>=4.3.1",
    "pylint>=2.17.5",
    "wikiextractor>=3.0.6",
    "hydra-core>=1.3.2",
    "tqdm>=4.66.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
predict-script = 'predict:main'
make-wiki-corpus = 'make_wiki_corpus:main'

[tool.rye.scripts]
download-wiki = { cmd = ["curl", "https://dumps.wikimedia.org/jawiki/latest/jawiki-latest-pages-articles.xml.bz2", "-o", "dataset/jawiki-latest-pages-articles.xml.bz2"] }
wiki-extract = { cmd = ["python", "-m", "wikiextractor.WikiExtractor", "dataset/jawiki-latest-pages-articles.xml.bz2", "-o", "dataset/wikitext"] }
build-docker-mecab-ipadic = { cmd = ["docker-compose", "build", "mecab_ipadic_tokenizer"] }
run-docker-mecab-ipadic = { cmd = ["docker-compose", "run", "mecab_ipadic_tokenizer"] }
down-docker-container = { cmd = ["docker-compose", "down", "-v"] }
train-script = { cmd = ["python", "src/train.py"] }
predict = { cmd = ["python", "src/predict.py", "--multirun", "+similar_words=grid_search"] }
